service/log-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-deployment
  labels:
    app: log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log
  template:
    metadata:
      labels:
        app: log
    spec:
      containers:
      - name: log
        image: rnjsxorl3075/kite_log:57
        ports:
        - containerPort: 8006
        imagePullPolicy: Always
