service/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  labels:
    app: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: rnjsxorl3075/kite_result:50
        ports:
        - containerPort: 8002
        imagePullPolicy: Always
