service/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-deployment
  labels:
    app: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
      - name: scheduler
        image: rnjsxorl3075/kite_scheduler:11
        ports:
        - containerPort: 8003
        imagePullPolicy: Always
