service/sendmsg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sendmsg-deployment
  labels:
    app: sendmsg
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sendmsg
  template:
    metadata:
      labels:
        app: sendmsg
    spec:
      containers:
      - name: sendmsg
        image: rnjsxorl3075/kite_sendmsg:36
        ports:
        - containerPort: 8021
        imagePullPolicy: Always
