service/brokermanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brokermanager-service
spec:
  selector:
    app: brokermanager
  ports: 
  - port: 80
    targetPort: 8005
