service/requestmsg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestmsg-service
spec:
  selector:
    app: requestmsg
  ports: 
  - port: 80
    targetPort: 8011
