service/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: result
  ports: 
  - port: 80
    targetPort: 8002
