service/scheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduler-service
spec:
  selector:
    app: scheduler
  ports: 
  - port: 80
    targetPort: 8003
