service/sendemail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendemail-service
spec:
  selector:
    app: sendemail
  ports: 
  - port: 80
    targetPort: 8022
