service/sendmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendmanager-service
spec:
  selector:
    app: sendmanager
  ports: 
  - port: 80
    targetPort: 8004
