service/sendmsg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendmsg-service
spec:
  selector:
    app: sendmsg
  ports: 
  - port: 80
    targetPort: 8021
