service/ingress-setting.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  rules:
  - http:
      paths:
      - path: /log
        pathType: Prefix
        backend:
          service:
            name: log-service
            port: 
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port: 
              number: 80
      - path: /brokermanager
        pathType: Prefix
        backend:
          service:
            name: brokermanager-service
            port: 
              number: 80
      - path: /request
        pathType: Prefix
        backend:
          service:
            name: requestmsg-service
            port: 
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-service
            port: 
              number: 80
      - path: /scheduler
        pathType: Prefix
        backend:
          service:
            name: scheduler-service
            port: 
              number: 80
      - path: /sendingBlock
        pathType: Prefix
        backend:
          service:
            name: sendmanager-service
            port: 
              number: 80
      - path: /sending
        pathType: Prefix
        backend:
          service:
            name: sendmanager-service
            port: 
              number: 80
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port: 
              number: 80
